[gd_scene load_steps=20 format=2]

[ext_resource path="res://addons/godot-openxr/config/OpenXRHand.gdns" type="Script" id=1]
[ext_resource path="res://addons/godot-openxr/scenes/center_ball_material.tres" type="Material" id=2]
[ext_resource path="res://entities/levels/VRLevelController.gd" type="Script" id=3]
[ext_resource path="res://entities/ui/vr/VRButtonClicker.gd" type="Script" id=4]
[ext_resource path="res://addons/godot-openxr/scenes/right_hand_material.tres" type="Material" id=5]
[ext_resource path="res://addons/godot-openxr/scenes/left_hand_material.tres" type="Material" id=6]
[ext_resource path="res://addons/godot-openxr/scenes/bone_material.tres" type="Material" id=7]
[ext_resource path="res://addons/godot-openxr/scenes/hand_nodes.gd" type="Script" id=8]
[ext_resource path="res://globals/modifiers/GlobalAccessModifier.gd" type="Script" id=9]

[sub_resource type="Environment" id=2]
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_sky_contribution = 0.5

[sub_resource type="SphereMesh" id=1]
material = ExtResource( 2 )
radius = 0.015
height = 0.03
radial_segments = 32
rings = 16

[sub_resource type="SphereMesh" id=8]
material = ExtResource( 6 )
radius = 0.01
height = 0.02
radial_segments = 32
rings = 16

[sub_resource type="CylinderMesh" id=3]
material = ExtResource( 7 )
top_radius = 0.005
bottom_radius = 0.005
height = 1.0

[sub_resource type="SphereMesh" id=6]
radius = 0.015
height = 0.03
radial_segments = 20
rings = 10

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.47451, 0.988235, 1, 1 )

[sub_resource type="SphereMesh" id=9]
material = ExtResource( 2 )
radius = 0.015
height = 0.03
radial_segments = 32
rings = 16

[sub_resource type="SphereMesh" id=10]
material = ExtResource( 5 )
radius = 0.01
height = 0.02
radial_segments = 32
rings = 16

[sub_resource type="CylinderMesh" id=11]
material = ExtResource( 7 )
top_radius = 0.005
bottom_radius = 0.005
height = 1.0

[sub_resource type="SphereShape" id=5]

[node name="VRLevel" type="Spatial"]
script = ExtResource( 3 )

[node name="ARVROrigin" type="ARVROrigin" parent="."]

[node name="ARVRCamera" type="ARVRCamera" parent="ARVROrigin"]
environment = SubResource( 2 )
current = true

[node name="LeftHand" type="Spatial" parent="ARVROrigin"]
script = ExtResource( 1 )

[node name="Wrist" type="MeshInstance" parent="ARVROrigin/LeftHand"]
mesh = SubResource( 1 )
script = ExtResource( 8 )

[node name="ThumbMetacarpal" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist"]
transform = Transform( 0.946029, 0, 0.324082, 0, 1, 0, -0.324082, 0, 0.946029, -0.0993336, 0, 0 )
mesh = SubResource( 8 )

[node name="ThumbProximal" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/ThumbMetacarpal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 8 )

[node name="ThumbDistal" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/ThumbMetacarpal/ThumbProximal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 8 )

[node name="ThumbTip" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/ThumbMetacarpal/ThumbProximal/ThumbDistal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 8 )

[node name="ThumbDistal_Bone" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/ThumbMetacarpal/ThumbProximal/ThumbDistal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 3 )

[node name="ThumbProximal_Bone" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/ThumbMetacarpal/ThumbProximal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 3 )

[node name="ThumbMetacarpal_Bone" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/ThumbMetacarpal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 3 )

[node name="IndexMetacarpal" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.054, 0, 0 )
mesh = SubResource( 8 )

[node name="IndexProximal" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/IndexMetacarpal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 8 )

[node name="IndexIntermediate" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/IndexMetacarpal/IndexProximal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 8 )

[node name="IndexDistal" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/IndexMetacarpal/IndexProximal/IndexIntermediate"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 8 )

[node name="IndexTip" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/IndexMetacarpal/IndexProximal/IndexIntermediate/IndexDistal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 8 )

[node name="IndexDistal_Bone" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/IndexMetacarpal/IndexProximal/IndexIntermediate/IndexDistal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 3 )

[node name="IndexIntermediate_Bone" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/IndexMetacarpal/IndexProximal/IndexIntermediate"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 3 )

[node name="IndexProximal_Bone" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/IndexMetacarpal/IndexProximal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 3 )

[node name="IndexMetacarpal_Bone" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/IndexMetacarpal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 3 )

[node name="MiddleMetacarpal" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.005, 0, 0 )
mesh = SubResource( 8 )

[node name="MiddleProximal" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/MiddleMetacarpal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 8 )

[node name="MiddleIntermediate" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/MiddleMetacarpal/MiddleProximal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 8 )

[node name="MiddleDistal" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/MiddleMetacarpal/MiddleProximal/MiddleIntermediate"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 8 )

[node name="MiddleTip" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/MiddleMetacarpal/MiddleProximal/MiddleIntermediate/MiddleDistal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 8 )

[node name="MiddleDistal_Bone" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/MiddleMetacarpal/MiddleProximal/MiddleIntermediate/MiddleDistal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 3 )

[node name="MiddleIntermediate_Bone" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/MiddleMetacarpal/MiddleProximal/MiddleIntermediate"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 3 )

[node name="MiddleProximal_Bone" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/MiddleMetacarpal/MiddleProximal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 3 )

[node name="MiddleMetacarpal_Bone" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/MiddleMetacarpal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 3 )

[node name="RingMetacarpal" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.035, 0, 0 )
mesh = SubResource( 8 )

[node name="RingProximal" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/RingMetacarpal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 8 )

[node name="RingIntermediate" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/RingMetacarpal/RingProximal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 8 )

[node name="RingDistal" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/RingMetacarpal/RingProximal/RingIntermediate"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 8 )

[node name="RingTip" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/RingMetacarpal/RingProximal/RingIntermediate/RingDistal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 8 )

[node name="RingDistal_Bone" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/RingMetacarpal/RingProximal/RingIntermediate/RingDistal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 3 )

[node name="RingIntermediate_Bone" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/RingMetacarpal/RingProximal/RingIntermediate"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 3 )

[node name="RingProximal_Bone" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/RingMetacarpal/RingProximal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 3 )

[node name="RingMetacarpal_Bone" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/RingMetacarpal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 3 )

[node name="LittleMetacarpal" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0695889, 0, 1.98185e-05 )
mesh = SubResource( 8 )

[node name="LittleProximal" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/LittleMetacarpal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 8 )

[node name="LittleIntermediate" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/LittleMetacarpal/LittleProximal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 8 )

[node name="LittleDistal" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/LittleMetacarpal/LittleProximal/LittleIntermediate"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 8 )

[node name="LittleTip" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/LittleMetacarpal/LittleProximal/LittleIntermediate/LittleDistal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 8 )

[node name="LittleDistal_Bone" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/LittleMetacarpal/LittleProximal/LittleIntermediate/LittleDistal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 3 )

[node name="LittleIntermediate_Bone" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/LittleMetacarpal/LittleProximal/LittleIntermediate"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 3 )

[node name="LittleProximal_Bone" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/LittleMetacarpal/LittleProximal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 3 )

[node name="LittleMetacarpal_Bone" type="MeshInstance" parent="ARVROrigin/LeftHand/Wrist/LittleMetacarpal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 3 )

[node name="Palm" type="MeshInstance" parent="ARVROrigin/LeftHand"]
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="RightHand" type="Spatial" parent="ARVROrigin"]
script = ExtResource( 1 )
hand = 1

[node name="Wrist" type="MeshInstance" parent="ARVROrigin/RightHand"]
mesh = SubResource( 9 )
script = ExtResource( 8 )

[node name="ThumbMetacarpal" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist"]
transform = Transform( 0.951057, 0, -0.309017, 0, 1, 0, 0.309017, 0, 0.951057, 0.089108, 0, 0 )
mesh = SubResource( 10 )

[node name="ThumbProximal" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/ThumbMetacarpal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 10 )

[node name="ThumbDistal" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/ThumbMetacarpal/ThumbProximal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 10 )

[node name="ThumbTip" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/ThumbMetacarpal/ThumbProximal/ThumbDistal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 10 )
script = ExtResource( 9 )
global_id = "right_thumb_tip"

[node name="ThumbDistal_Bone" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/ThumbMetacarpal/ThumbProximal/ThumbDistal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 11 )

[node name="ThumbProximal_Bone" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/ThumbMetacarpal/ThumbProximal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 11 )

[node name="ThumbMetacarpal_Bone" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/ThumbMetacarpal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 11 )

[node name="IndexMetacarpal" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.048, 0, 0 )
mesh = SubResource( 10 )

[node name="IndexProximal" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/IndexMetacarpal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 10 )

[node name="IndexIntermediate" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/IndexMetacarpal/IndexProximal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 10 )

[node name="IndexDistal" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/IndexMetacarpal/IndexProximal/IndexIntermediate"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 10 )

[node name="IndexTip" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/IndexMetacarpal/IndexProximal/IndexIntermediate/IndexDistal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 10 )
script = ExtResource( 9 )
global_id = "right_index_tip"

[node name="IndexDistal_Bone" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/IndexMetacarpal/IndexProximal/IndexIntermediate/IndexDistal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 11 )

[node name="IndexIntermediate_Bone" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/IndexMetacarpal/IndexProximal/IndexIntermediate"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 11 )

[node name="IndexProximal_Bone" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/IndexMetacarpal/IndexProximal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 11 )

[node name="IndexMetacarpal_Bone" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/IndexMetacarpal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 11 )

[node name="MiddleMetacarpal" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.001, 0, 0 )
mesh = SubResource( 10 )

[node name="MiddleProximal" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/MiddleMetacarpal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 10 )

[node name="MiddleIntermediate" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/MiddleMetacarpal/MiddleProximal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 10 )

[node name="MiddleDistal" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/MiddleMetacarpal/MiddleProximal/MiddleIntermediate"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 10 )

[node name="MiddleTip" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/MiddleMetacarpal/MiddleProximal/MiddleIntermediate/MiddleDistal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 10 )

[node name="MiddleDistal_Bone" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/MiddleMetacarpal/MiddleProximal/MiddleIntermediate/MiddleDistal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 11 )

[node name="MiddleIntermediate_Bone" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/MiddleMetacarpal/MiddleProximal/MiddleIntermediate"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 11 )

[node name="MiddleProximal_Bone" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/MiddleMetacarpal/MiddleProximal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 11 )

[node name="MiddleMetacarpal_Bone" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/MiddleMetacarpal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 11 )

[node name="RingMetacarpal" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.061, 0, 0 )
mesh = SubResource( 10 )

[node name="RingProximal" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/RingMetacarpal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 10 )

[node name="RingIntermediate" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/RingMetacarpal/RingProximal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 10 )

[node name="RingDistal" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/RingMetacarpal/RingProximal/RingIntermediate"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 10 )

[node name="RingTip" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/RingMetacarpal/RingProximal/RingIntermediate/RingDistal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 10 )

[node name="RingDistal_Bone" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/RingMetacarpal/RingProximal/RingIntermediate/RingDistal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 11 )

[node name="RingIntermediate_Bone" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/RingMetacarpal/RingProximal/RingIntermediate"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 11 )

[node name="RingProximal_Bone" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/RingMetacarpal/RingProximal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 11 )

[node name="RingMetacarpal_Bone" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/RingMetacarpal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 11 )

[node name="LittleMetacarpal" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.117382, 0, 1.98185e-05 )
mesh = SubResource( 10 )

[node name="LittleProximal" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/LittleMetacarpal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 10 )

[node name="LittleIntermediate" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/LittleMetacarpal/LittleProximal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 10 )

[node name="LittleDistal" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/LittleMetacarpal/LittleProximal/LittleIntermediate"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 10 )

[node name="LittleTip" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/LittleMetacarpal/LittleProximal/LittleIntermediate/LittleDistal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05 )
mesh = SubResource( 10 )

[node name="LittleDistal_Bone" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/LittleMetacarpal/LittleProximal/LittleIntermediate/LittleDistal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 11 )

[node name="LittleIntermediate_Bone" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/LittleMetacarpal/LittleProximal/LittleIntermediate"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 11 )

[node name="LittleProximal_Bone" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/LittleMetacarpal/LittleProximal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 11 )

[node name="LittleMetacarpal_Bone" type="MeshInstance" parent="ARVROrigin/RightHand/Wrist/LittleMetacarpal"]
transform = Transform( 1, 0, 0, 0, -1.09278e-09, -1, 0, 0.025, -4.37114e-08, 0, 0, -0.025 )
mesh = SubResource( 11 )

[node name="Palm" type="MeshInstance" parent="ARVROrigin/RightHand"]
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="VRButtonClicker" type="Area" parent="ARVROrigin/RightHand"]
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="ARVROrigin/RightHand/VRButtonClicker"]
transform = Transform( 0.05, 0, 0, 0, 0.02, 0, 0, 0, 0.05, 0, 0, 0 )
shape = SubResource( 5 )

[node name="MainLabel" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1 )
text = "Loading..."
